# blender_kitti

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
assets/: LICENSE.txt
blender_kitti/: __init__.py  blender_kitti.py  bpy_helper.py  cli.py  colormap_turbo.py  data.py  height_map.py  material_shader.py  mesh.py  object_spotlight.py  particles.py  point_cloud.py  scene_setup.py  system_setup.py  voxels.py
blender_kitti_example/: __init__.py  data.py  example_render_kitti.py
blender_kitti_examples/: __init__.py  data.py  example_render_kitti.py
data/: semantic_label_kitti_odometry_08_001000.label  voxel_label_kitti_odometry_08_001000.invalid  voxel_label_kitti_odometry_08_001000.occluded
docker/: Dockerfile
scripts/: ci_install.sh
tests/: test_dummy.py
